# imessage-conversation-analyzer

./: .flake8  .gitignore  AGENTS.md  LICENSE.txt  README.md  context7.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  lint.yml  publish.yml  tests.yml
desktop-app/: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.json  svelte.config.js  vite.config.js  vite.config.ts
desktop-app/plugins/: sidecar-build.js  sidecar-build.ts
desktop-app/scripts/: build-sidecar.sh  sidecar_wrapper.rs
desktop-app/src/: app.html  colors.ts  types.ts
desktop-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src/components/: ContactPicker.svelte  DateCell.svelte  DateRangeFields.svelte  Header.svelte  HeaderContactSelection.svelte  InlineNotification.svelte  MetricBarChart.svelte  MetricPieChart.svelte  MetricSection.svelte  MetricStackedBarChart.svelte  MetricsPieChart.svelte  NumberCell.svelte  ResultGrid.svelte
desktop-app/src/lib/: cli.ts  contactStore.ts  contacts.svelte.ts  contacts.ts  countPhrases.svelte.ts  dateFilterPersistence.svelte.ts  dateFilters.svelte.ts  dateFilters.ts  lastVisitedPage.svelte.ts  permissions.svelte.ts  resultGridDateFilters.svelte.ts  sidecar.ts  store.svelte.ts
desktop-app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
desktop-app/src/routes/attachment-totals/: +page.svelte
desktop-app/src/routes/attachments/: +page.svelte
desktop-app/src/routes/call-cli/: +page.svelte
desktop-app/src/routes/count-phrases/: +page.svelte
desktop-app/src/routes/emojis/: +page.svelte
desktop-app/src/routes/message-totals/: +page.svelte
desktop-app/src/routes/messages/: +page.svelte
desktop-app/src/routes/most-frequent-emojis/: +page.svelte
desktop-app/src/routes/phrases/: +page.svelte
desktop-app/src/routes/set-contact/: +page.svelte
desktop-app/src/routes/set-contacts/: +page.svelte
desktop-app/src/routes/totals-by-day/: +page.svelte
desktop-app/src/routes/transcript/: +page.svelte
desktop-app/src/styles/: colors.css  combobox.css  contact-picker.css  header.css  layout.css  metric-bar-chart.css  metric-pie-chart.css  metric-stacked-bar-chart.css  metrics-bar-chart.css  metrics-pie-chart.css  metrics-stacked-bar-chart.css  page.css  result-grid.css  utility-classes.css
ica/: __init__.py  __main__.py  analyzer.py  cli.py  contact.py  core.py  emojis.json  emojis.txt  exceptions.py  query.sql
ica/analyzers/: attachment_totals.py  combined_report.py  count_phrase.py  count_phrases.py  from_sql.py  message_totals.py  most_frequent_emojis.py  totals_by_day.py  transcript.py
ica/analyzers/from_prompt/: __main__.py  exceptions.py  system-prompt.txt
ica/metrics/: attachment_totals.py  conversation_export.py  least_frequent_emojis.py  message_totals.py  most_frequent_emojis.py  totals_by_day.py  transcript.py
ica/queries/: attachments.sql  contact.sql  messages.sql
tests/: __init__.py  conftest.py  mock_db_utils.py  test_attachment_totals.py  test_attributedbody.py  test_cli.py  test_contact.py  test_count_phrases.py  test_db.py  test_exceptions.py  test_filtering.py  test_from_prompt.py  test_from_sql.py  test_handles.py  test_main.py  test_message_totals.py  test_module.py  test_most_frequent_emojis.py  test_output_results.py  test_participants.py  test_totals_by_day.py  test_transcript.py  utils.py
tests/data/: chat.json  chat_message_join.json  message.json  most_frequent_emojis.json  totals_by_day.json  transcript-1.json  transcript-2.json  transcript.json
tests/data/analyzers/: generated_from_prompt.py
tests/data/chats/: attachment.json  chat_message_join.json  message.json
tests/data/dbs/chats/: attachment.json  chat.json  chat_handle_join.json  chat_message_join.json  handle.json  message.json  message_attachment_join.json
tests/data/dbs/contacts/: ZABCDEMAILADDRESS.json  ZABCDPHONENUMBER.json  ZABCDRECORD.json
tests/data/output/: output_results_labels_in_index.txt
tests/data/output/csv/: output_results_date_index.csv  output_results_date_index.txt  output_results_default_index.csv  output_results_labels_in_index.csv  output_results_labels_in_index.txt
tests/data/output/default/: output_results_date_index.txt
tests/data/output/json/: output_results_date_index.json  output_results_default_index.json  output_results_labels_in_index.json
tests/data/output/md/: output_results_date_index.md  output_results_default_index.md  output_results_labels_in_index.md
tests/data/output/txt/: output_results_date_index.txt  output_results_default_index.txt  output_results_from_prompt_no_usage.txt  output_results_from_prompt_with_usage.txt  output_results_from_sql.txt  output_results_labels_in_index.txt
tests/data/queries/: generated_from_prompt.sql
