[project]
name = "imessage-conversation-analyzer"
version = "2.8.0"
description = "Analyzes the entire history of a macOS Messages conversation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = 'Caleb Evans', email = 'caleb@calebevans.me'}
]
license = "MIT"
keywords = ["apple", "imessage", "macos", "conversation", "chat", "analysis", "pandas"]
dependencies = [
    "pandas",
    "pyarrow",
    "tabulate",
    "openpyxl",
    "pytypedstream",
    "phonenumbers",
    "tzlocal",
    "openai>=1.102.0",
]

[project.urls]
homepage = "https://github.com/caleb531/imessage-conversation-analyzer"
documentation = "https://github.com/caleb531/imessage-conversation-analyzer#readme"
repository = "https://github.com/caleb531/imessage-conversation-analyzer"
changelog = "https://github.com/caleb531/imessage-conversation-analyzer/releases"

[project.scripts]
ica = "ica.__main__:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ica"
module-root = ""

[tool.mypy]
exclude = ["build"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "tabulate.*",
    "typedstream.*",
    "nose2.*"
]
ignore_missing_imports = true

[tool.flake8]
# Black compatibility
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "build/**/*.py", "__pycache__", "*.egg-info", ".virtualenv"]

# Per <https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile>
[tool.isort]
profile = "black"

# Configuration for coverage.py (https://pypi.python.org/pypi/coverage)

[tool.coverage.run]
# Enable branch coverage
branch = true
source = ['ica']

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
    "pass",
]
# Only check coverage for source files
include = ["ica/**/*.py"]

[dependency-groups]
dev = [
    "coverage==7.6.10",
    "freezegun==1.5.1",
    "mypy==1.14.1",
    "nose2==0.15.1",
    "ruff>=0.12.0",
]
